# Kasperkey_toolbox

./: AGENTS.md  Kaspersky.txt  README.md  act.vbs  gui.py  pyproject.toml
src/kaspersky_toolbox/: __init__.py  __main__.py  act.vbs  activation.py  app.py  singleton.py  utils.py
